# primeiro-arquivo-em-fastapi

./: README.md  dev.py  pyproject.toml
api/: aplication.py  comfiguracao.py
api/routes/: users.py
