[tool.poetry]
name = "meu-projeto"
version = "0.1.0"
description = ""
authors = ["Your Name <lansilva007gg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["standard"], version = "^0.115.2"}

[tool.taskipy.tasks]
dev = "fastapi dev dev.py"
prod = "PYTHONPATH=src uvicorn src.api.aplication:app --host 0.0.0.0 --port 8000"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
